<resources>
    <string name="app_name">Gravity</string>

    <string name="username">Rebecca.971008@gmail.com</string>
    <string name="description">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
    </string>
    <string name="nickname">Rebecca</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="title_activity_group_message">GroupMessageActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="contest_name">xxxxxxxxxxxx大赛</string>
    <string name="contest_image">contest_image</string>
    <string name="contest_detail">赛事详情</string>
    <string name="contest_hits">1128</string>
    <string name="release_time">发布时间</string>
    <string name="contest_detail_text">易烊千玺，2000年11月28日生于湖南怀化，中国内地男歌手、舞者、演员，TFBOYS成员，就读于中央戏剧学院。
2005年，首登电视荧屏，开始参演各类综艺节目。2009年，加入“飞炫少年”组合，两年后退出。2013年6月，获邀加入TF家族；
同年8月，以TFBOYS形式出道。2015年10月，为《小王子》男主角配音，该片刷新法国动画电影在华票房纪录。
11月，表演自编舞蹈《IF YOU》和《RHYTHM TA》，创下爱奇艺生日会直播在线用户数据最高纪录。
2016年2月，登上猴年春晚。4月，荣获第16届音乐风云榜年度盛典最受欢迎偶像。8月，表演自编舞蹈《Tell Me Why》。
11月，荣登2016中国泛娱乐指数盛典明星影响力榜首；同月，发行单曲《你说》，并表演自编舞蹈《青春》和《扇子舞》。
12月，荣登史记·2016年度十大明星之首。2017年1月，登上鸡年春晚。4月，发行单曲《离骚》，该曲荣获Billboard Radio China 2017年度华语金曲。
10月， 荣获ELLE年度人气偶像，并确认主演《长安十二时辰》及《艳势番之新青年》两部剧集。
11月，发行单曲《Nothing to Lose》和《Unpredictable》。12月，登上《芭莎男士》封面，加盟优酷《这！就是街舞》。
2018年1月，出席第60届格莱美奖颁奖典礼。2月，登上狗年春晚。4月，登上《智族GQ》封面。7月，确认出演电影《少年的你》男主角。
9月，参演雅加达亚运会闭幕式“杭州8分钟”。10月，发行单曲《精彩才刚刚开始》。11月，登上《嘉人》和《时尚先生》封面。

易烊千玺，2000年11月28日生于湖南怀化，中国内地男歌手、舞者、演员，TFBOYS成员，就读于中央戏剧学院。
2005年，首登电视荧屏，开始参演各类综艺节目。2009年，加入“飞炫少年”组合，两年后退出。2013年6月，获邀加入TF家族；
同年8月，以TFBOYS形式出道。2015年10月，为《小王子》男主角配音，该片刷新法国动画电影在华票房纪录。
11月，表演自编舞蹈《IF YOU》和《RHYTHM TA》，创下爱奇艺生日会直播在线用户数据最高纪录。
2016年2月，登上猴年春晚。4月，荣获第16届音乐风云榜年度盛典最受欢迎偶像。8月，表演自编舞蹈《Tell Me Why》。
11月，荣登2016中国泛娱乐指数盛典明星影响力榜首；同月，发行单曲《你说》，并表演自编舞蹈《青春》和《扇子舞》。
12月，荣登史记·2016年度十大明星之首。2017年1月，登上鸡年春晚。4月，发行单曲《离骚》，该曲荣获Billboard Radio China 2017年度华语金曲。
10月， 荣获ELLE年度人气偶像，并确认主演《长安十二时辰》及《艳势番之新青年》两部剧集。
11月，发行单曲《Nothing to Lose》和《Unpredictable》。12月，登上《芭莎男士》封面，加盟优酷《这！就是街舞》。
2018年1月，出席第60届格莱美奖颁奖典礼。2月，登上狗年春晚。4月，登上《智族GQ》封面。7月，确认出演电影《少年的你》男主角。
9月，参演雅加达亚运会闭幕式“杭州8分钟”。10月，发行单曲《精彩才刚刚开始》。11月，登上《嘉人》和《时尚先生》封面。</string>
    <string name="title_activity_team">TeamActivity</string>

</resources>
